tests/baselines/reference/numericIndexerTyping2.types
=== tests/cases/compiler/numericIndexerTyping2.ts ===
class I {
>I : I

    [x: string]: Date
>x : string
}

class I2 extends I {
>I2 : I2
>I : I
}

var i: I;
>i : I

var r: string = i[1]; // error: numeric indexer returns the type of the string indexer
>r : string
>i[1] : Date
>i : I
>1 : 1

var i2: I2;
>i2 : I2

var r2: string = i2[1]; // error: numeric indexer returns the type of the string indexere
>r2 : string
>i2[1] : Date
>i2 : I2
>1 : 1

